--- a/views/Dashboard/nilai-remedial.ejs
+++ b/views/Dashboard/nilai-remedial.ejs
@@ -8,49 +8,27 @@
                 <table class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50">
                         <tr>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID Nilai</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nama Mahasiswa</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nama Mata Kuliah</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Deskripsi</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Materi Ujian</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Aksi</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nama</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Mata Kuliah Ujian</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nilai Sebelumnya</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nilai Baru</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Status</th>
+                            <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Aksi</th>
                         </tr>
                     </thead>
                     <tbody class="divide-y divide-gray-200">
-                        <% nilai.forEach(matkul => { %>
-                            <% if (matkul.mahasiswa && matkul.mahasiswa.pendaftarans && matkul.mahasiswa.pendaftarans.length > 0) { %>
-                                <% matkul.mahasiswa.pendaftarans.forEach((daftar, index) => { %>
-                                    <tr>
-                                        <!-- Only show the nilai details on the first row -->
-                                        <% if (index === 0) { %>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800" rowspan="<%= matkul.mahasiswa.pendaftarans.length %>"><%= matkul.id %></td>
-                                        <% } %>
-                                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= daftar.alasan %></td>
-                                        <!-- Only show the other nilai details on the first row -->
-                                        <% if (index === 0) { %>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800" rowspan="<%= matkul.mahasiswa.pendaftarans.length %>"><%= matkul.id_ujian %></td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium" rowspan="<%= matkul.mahasiswa.pendaftarans.length %>">
-                                                <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this matkul?');">
-                                                    <input type="hidden" name="id" value="<%= matkul.id_ujian %>">
-                                                    <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                                                </form>
-                                            </td>
-                                        <% } %>
-                                    </tr>
-                                <% }) %>
-                            <% } else { %>
-                                <tr>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.id %></td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">No Data</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.id_ujian %></td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                                        <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this matkul?');">
-                                            <input type="hidden" name="id" value="<%= matkul.id_ujian %>">
-                                            <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            <% } %>
+                        <% pendaftaran.forEach(status => { %>
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.mahasiswa.nama %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.ujian.nama_matkul %></td>                               
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.nilai_sebelumnya %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.nilai %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
+                                    <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this mahasiswa?');">
+                                        <input type="hidden" name="id" value="<%= status.id %>">
+                                        <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
+                                    </form>                                </td>
+                            </tr>
                         <% }) %>
                     </tbody>
                 </table>
@@ -59,7 +37,7 @@
     </div>
 </div>
 <!-- End Table -->
-
+</div>
 <!-- End Content -->
 <!-- ========== END MAIN CONTENT ========== -->
 
