--- a/views/Dosen/dashboardDsn.ejs
+++ b/views/Dosen/dashboardDsn.ejs
@@ -1,1 +1,98 @@
 <%-include("headDsn.ejs")%>
+<h1 class="text-2xl text-hijau font-bold md:text-4xl md:leading-tight pt-5 pb-12"><%= title %></h1>
+
+<!-- Buttons -->
+<div class="flex justify-end space-x-2 mb-4">
+    <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" href="#">
+        Edit Nilai Baru
+    </a>
+
+    <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">        
+        Print
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-printer"><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><path d="M6 9V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6"/><rect x="6" y="14" width="12" height="8" rx="1"/></svg>
+    </a>
+</div>
+
+<!-- Table -->
+<div class="flex flex-col">
+    <div class="-m-1.5 overflow-x-auto">
+        <div class="p-1.5 min-w-full inline-block align-middle">
+            <div class="border rounded-lg overflow-hidden">
+                <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">NIM</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nama</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Mata Kuliah Ujian</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nilai Sebelumnya</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nilai Baru</th>
+                            <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Aksi</th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-200">
+                        <% pendaftaran.forEach(status => { %>
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.mahasiswa.nim %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.mahasiswa.nama %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.ujian.nama_matkul %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.nilai_sebelumnya %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.nilai %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
+                                    <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this mahasiswa?');">
+                                        <input type="hidden" name="id" value="<%= status.id %>">
+                                        <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
+                                    </form>
+                                </td>
+                            </tr>
+                        <% }) %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Table -->
+<div id="addNilaiModal" class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity hidden">
+    <div class="fixed inset-0 z-50 overflow-y-auto">
+        <div class="flex items-end justify-center min-h-full p-4 text-center sm:items-center sm:p-0">
+            <div class="relative bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-lg sm:w-full">
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <h3 class="text-lg leading-6 font-medium text-gray-900">Tambah Nilai Baru</h3>
+                    <div class="mt-2">
+                        <form id="addNilaiForm" action="/admin/addNilai" method="POST">
+                            <div class="mb-4">
+                                <label for="nim" class="block text-sm font-medium text-gray-700">NIM</label>
+                                <input type="text" name="nim" id="nim" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                            </div>
+                            <div class="mb-4">
+                                <label for="nama" class="block text-sm font-medium text-gray-700">Nama</label>
+                                <input type="text" name="nama" id="nama" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                            </div>
+                            <div class="mb-4">
+                                <label for="nama_matkul" class="block text-sm font-medium text-gray-700">Mata Kuliah Ujian</label>
+                                <input type="text" name="nama_matkul" id="nama_matkul" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                            </div>
+                            <div class="mb-4">
+                                <label for="nilai_sebelumnya" class="block text-sm font-medium text-gray-700">Nilai Sebelumnya</label>
+                                <input type="text" name="nilai_sebelumnya" id="nilai_sebelumnya" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                            </div>
+                            <div class="mb-4">
+                                <label for="nilai" class="block text-sm font-medium text-gray-700">Nilai Baru</label>
+                                <input type="text" name="nilai" id="nilai" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                            </div>
+                            <div class="flex justify-end">
+                                <button type="button" id="cancelButton" class="py-2 px-4 bg-gray-500 hover:bg-gray-700 text-white rounded-lg">Cancel</button>
+                                <button type="submit" class="py-2 px-4 bg-blue-600 hover:bg-blue-700 text-white rounded-lg ml-2">Save</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="/preline.js"></script>
+
+<%-include("modal.ejs")%>
+</html>
