--- a/views/Dosen/jadwal-remed.ejs
+++ b/views/Dosen/jadwal-remed.ejs
@@ -1,6 +1,5 @@
 <%- include("headDsn.ejs") %>
 
-<div class="w-auto pt-0 px-4 sm:px-6 md:px-8 lg:ps-72">
   <h1 class="text-2xl text-hijau font-bold md:text-4xl md:leading-tight pt-5 pb-12">Jadwal Remedial</h1>
 
   <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
@@ -529,3 +528,4 @@
 </div>
 </div>
 </div>
+<%- include("modal.ejs") %>
