--- a/views/Dashboard/tambah-matkul.ejs
+++ b/views/Dashboard/tambah-matkul.ejs
@@ -10,8 +10,8 @@
         <input class="w-full border border-gray-300 rounded px-2 py-1" type="text" id="nama_matkul" name="nama_matkul" required>
       </div>
       <div class="mb-4">
-        <label class="block font-bold mb-1" for="dosen">Dosen Pengampu</label>
-        <input class="w-full border border-gray-300 rounded px-2 py-1" type="text" id="dosen" name="dosen" required>
+        <label class="block font-bold mb-1" for="dosen_pengampu">Dosen Pengampu</label>
+        <input class="w-full border border-gray-300 rounded px-2 py-1" type="text" id="dosen_pengampu" name="dosen_pengampu" required>
       </div>
       <div class="mb-4">
         <label class="block font-bold mb-1" for="deskripsi">Deskripsi Mata Kuliah</label>
