--- a/views/Dashboard/dashboard.ejs
+++ b/views/Dashboard/dashboard.ejs
@@ -10,8 +10,8 @@
                         <tr>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID Mata Kuliah</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Mata Kuliah</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Dosen Pengampu</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Jadwal Remedial</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Deskripsi</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Materi Ujian</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Aksi</th>
                         </tr>
@@ -21,6 +21,7 @@
                             <tr>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.id %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.nama_matkul %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.dosen_pengampu %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%=new Date (matkul.jadwal).toLocaleString('en-GB', {
                                     day: '2-digit',
                                     month: 'short',
@@ -29,13 +30,13 @@
                                     minute: '2-digit',
                                     hour12: false
                                 });%></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.deskripsi %></td>
+                                
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.materi_ujian %></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                                    <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this matkul?');">
-                                        <input type="hidden" name="id" value="<%= ujian.id %>">
-                                        <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                                    </form>                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this matkul?');">
+                                    <input type="hidden" name="id" value="<%= ujian.id %>">
+                                    <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
+                                </form>                                </td>
                             </tr>
                         <% }) %>
                     </tbody>
