--- a/views/Dosen/headDsn.ejs
+++ b/views/Dosen/headDsn.ejs
@@ -22,7 +22,7 @@
         </svg>
     </li>
     <li class="text-sm font-semibold text-gray-800 truncate" aria-current="page">
-        Dashboard
+        <%=  title %>
     </li>
     </ol>
     <!-- End Breadcrumb -->
@@ -59,7 +59,7 @@ lg:block lg:translate-x-0 lg:end-auto lg:bottom-0">
 
 <nav class="hs-accordion-group p-3 mt-5 w-full flex flex-col flex-wrap" data-hs-accordion-always-open>
     <ul class="space-y-1.5">
-        <div class="flex-shrink-0 group block">
+        <div class="flex-shrink-0 group block mb-5">
             <div class="flex items-center">
               <img class="w-8 h-auto rounded-full" src="/unand1.jpeg" alt="Maria">
               <div class="ms-3">
@@ -139,4 +139,5 @@ lg:block lg:translate-x-0 lg:end-auto lg:bottom-0">
     </div>
     </nav>
 </header>
+<script src="/preline.js"></script>
 <!-- End Navbar -->
