--- a/views/Dashboard/status-pendaftaran.ejs
+++ b/views/Dashboard/status-pendaftaran.ejs
@@ -5,16 +5,17 @@
     <div class="-m-1.5 overflow-x-auto">
         <div class="p-1.5 min-w-full inline-block align-middle">
             <div class="border rounded-lg overflow-hidden">
-                <table class="min-w-full divide-y divide-gray-200">
+                <table class="w-full divide-y divide-gray-200 table-auto">
                     <thead class="bg-gray-50">
                         <tr>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID Pendaftaran</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Name</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Mata Kuliah Ujian</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Tanggal Daftar</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nilai Sebelumnya</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Alasan</th>
                             <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Bukti Pembayaran</th>
+                            <th scope="col" class="px-6 py-3 text-center whitespace-nowrap text-xs font-medium text-gray-500 uppercase">Status Verifikasi</th>
                             <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Aksi</th>
                         </tr>
                     </thead>
@@ -28,7 +29,18 @@
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.nilai_sebelumnya %></td>
                                 <td class="px-6 py-4 whitespace-wrap text-sm font-medium text-gray-800"><%= status.alasan %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><img class="w-24 h-auto" src="<%= status.bukti_pembayaran %>" alt="Maria"></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">
+                                    <form action="/admin/updateStatus" method="POST">
+                                        <input type="hidden" name="id" value="<%= status.id %>">
+                                        <select name="status_verifikasi" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                                            <option value="diproses" <%= status.status_verifikasi === 'diproses' ? 'selected' : '' %>>Diproses</option>
+                                            <option value="diverifikasi" <%= status.status_verifikasi === 'diverifikasi' ? 'selected' : '' %>>Diverifikasi</option>
+                                            <option value="ditolak" <%= status.status_verifikasi === 'ditolak' ? 'selected' : '' %>>Ditolak</option>
+                                        </select>
+                                        <button type="submit" class="mt-2 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none">Update</button>
+                                    </form>
+                                </td>
+                                                                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
                                     <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this mahasiswa?');">
                                         <input type="hidden" name="id" value="<%= status.id %>">
                                         <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
