--- a/views/Dashboard/headAdm.ejs
+++ b/views/Dashboard/headAdm.ejs
@@ -123,7 +123,7 @@ lg:block lg:translate-x-0 lg:end-auto lg:bottom-0">
     <nav class="relative max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8" aria-label="Global">
     <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow sm:block">
         <div class="flex flex-col gap-y-4 gap-x-0 mt-5 sm:flex-row sm:items-center sm:justify-end sm:gap-y-0 sm:gap-x-7 sm:mt-0 sm:ps-7">
-        <a class="font-medium text-blue-600 sm:py-6" href="#" aria-current="page">Landing</a>
+        <!-- <a class="font-medium text-blue-600 sm:py-6" href="#" aria-current="page">Landing</a>
         <a class="font-medium text-gray-500 hover:text-gray-400 sm:py-6" href="#">Account</a>
         <a class="font-medium text-gray-500 hover:text-gray-400 sm:py-6" href="#">Work</a>
         <a class="font-medium text-gray-500 hover:text-gray-400 sm:py-6" href="#">Blog</a>
@@ -168,7 +168,7 @@ lg:block lg:translate-x-0 lg:end-auto lg:bottom-0">
                 Team Account
             </a>
             </div>
-        </div>
+        </div> -->
 
         <a class="flex items-center gap-x-2 font-medium text-gray-500 hover:text-blue-600 sm:border-s sm:border-gray-300 sm:my-6 sm:ps-6" href="/admin/ubah">
             <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
